# depthai-unity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OAKForUnity/: README.md
OAKForUnity/URP/: .gitignore
OAKForUnity/URP/Assets/AzureObjectAnchors.SDK/Resources/: ObjectAnchorsConfig.asset
OAKForUnity/URP/Assets/CubePeopleDemo/: Readme.txt
OAKForUnity/URP/Assets/CubePeopleDemo/Animations/: Ch_CP00.controller  Ch_DemoPlayer.controller  Idle00.FBX  Run00.FBX  Walk00.FBX
OAKForUnity/URP/Assets/CubePeopleDemo/Materials/: Item_Cm00_00.mat
OAKForUnity/URP/Assets/CubePeopleDemo/Meshes/: Ch_CP00.FBX  Item_Backpack00.FBX  Item_HatBaseball01.FBX  Item_Pistol00.FBX  Item_Rifle00.FBX
OAKForUnity/URP/Assets/CubePeopleDemo/Prefabs/: DemoPlayer00.prefab
OAKForUnity/URP/Assets/CubePeopleDemo/Scenes/: CubePeopleDemo_Display.unity  CubePeopleDemo_DisplaySettings.lighting  CubePeople_Demo.unity  CubePeople_DemoSettings.lighting
OAKForUnity/URP/Assets/CubePeopleDemo/Scripts/: AnimationController.cs  CubePeopleTraffic.cs  EightDirectionMovement.cs  FollowTarget.cs
OAKForUnity/URP/Assets/MixedRealityToolkit.Generated/: ProjectPreferences.asset
OAKForUnity/URP/Assets/Settings/: URP-HighFidelity.asset
OAKForUnity/URP/Assets/XR/: XRGeneralSettings.asset
OAKForUnity/URP/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
OAKForUnity/URP/UserSettings/: EditorUserSettings.asset  MixedRealityOpenXRRemotingSettings.asset  Search.settings
OAKForUnity/URP/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
OAKForUnity/docs/: Unity.md
docs/: Build_unity_lib.md  Quick_install.md  README.md  What_is.md
include/depthai-unity/: Depth.hpp
include/depthai-unity/device/: DeviceManager.hpp  PointCloudVFX.hpp
include/depthai-unity/predefined/: BodyPose.hpp  FaceDetector.hpp
prebuild_demos/: README.md
src/: Depth.cpp  utility.cpp  utility.hpp
src/device/: DeviceManager.cpp  PointCloudVFX.cpp  Streams.cpp
src/predefined/: BodyPose.cpp  FaceDetector.cpp  FaceEmotion.cpp  HeadPose.cpp  ObjectDetector.cpp
unity_bridge/: depthai_hand_tracking_unity_bridge.py  test_unity_bridge.py  unity_bridge.py
xcode/depthai-unity/depthai-unity.xcodeproj/: project.pbxproj
(+945 files in other folders)
